tests/pass/0104_logical_not_truthiness.ee
fn main() {
    println(!0);
    println(!1);
    println(!nothing);
}
