tests/fail/0095_len_integer.ee
fn main() {
    println(len(1));
}
